--- a/views/index.ejs
+++ b/views/index.ejs
@@ -152,7 +152,7 @@
           <ul style="padding-left: 0;">
             <li>Project 1 detail: Create a full-stack web application using Node.js and ExpressJS</li>
           </ul>
-          <a href="http://www.firstproject24.herokuapp.com">http://www.firstproject24.herokuapp.com</a>
+          <a href="https://www.firstproject24.herokuapp.com">https://www.firstproject24.herokuapp.com</a>
           <br>
           Description: Integrate many-to-many associations; use external API’s to add functionality, the ability to handle invalid data, implement authentication and authorization, and model specs that verify validations. 
           <br>
@@ -364,7 +364,7 @@
           </div>
           
           <div class="col-lg-6 col-lg-offset-2">
-            <p><img class="img-responsive" src="http://i.imgur.com/VvDRkUW.png?1" alt=""></p>
+            <p><img class="img-responsive" src="https://i.imgur.com/VvDRkUW.png?1" alt=""></p>
           </div>
           <div class="col-lg-4">
               <p style="color: white; font-weight: bold;">PORTFOLIO</p>
