--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
           <p>Currently, I am a student of the full stack Web Development Immersive program at General Assembly, looking to contribute to a team and grow my skills as a junior developer. I'm interested in all kinds of programming assets and I enjoy both front and back-end programming. Other things I enjoy besides programming include playing basketball, watching movies, and volunteering.</p>
         </div>
         <div class="col-lg-3">
-          <p><a href="https://www.dropbox.com/s/e6ocah971uuij9d/Ryan%27s%20Resume.pdf?dl=1"><i class="icon-file"></i><sm>DOWNLOAD PAPER RESUME</sm></a></p>
+          <p><a target='_blank' href="https://www.dropbox.com/s/e6ocah971uuij9d/Ryan%27s%20Resume.pdf?dl=1"><i class="icon-file"></i><sm>DOWNLOAD PAPER RESUME</sm></a></p>
         </div>
       </div>
     </div>
@@ -113,10 +113,10 @@
           <br>
           <br>
           <t>Github:</t>
-          <a href="https://github.com/ryanshim24">https://github.com/ryanshim24</a>
+          <a target='_blank' href="https://github.com/ryanshim24">https://github.com/ryanshim24</a>
           <br>
           <t>Portfolio:</t>
-          <a href="https://ryan-portfolio.herokuapp.com">https://ryan-portfolio.herokuapp.com</a>
+          <a target='_blank' href="https://ryan-portfolio.herokuapp.com">https://ryan-portfolio.herokuapp.com</a>
           </p>
         </div>
     </div>
@@ -152,7 +152,7 @@
           <ul style="padding-left: 0;">
             <li>Project 1 detail: Create a full-stack web application using Node.js and ExpressJS</li>
           </ul>
-          <a href="https://www.firstproject24.herokuapp.com">https://www.firstproject24.herokuapp.com</a>
+          <a target='_blank' href="https://www.firstproject24.herokuapp.com">https://www.firstproject24.herokuapp.com</a>
           <br>
           Description: Integrate many-to-many associations; use external API’s to add functionality, the ability to handle invalid data, implement authentication and authorization, and model specs that verify validations. 
           <br>
@@ -347,7 +347,7 @@
           <p><more>MovieMon was an app I built when I was first learning how to use API calls. It allows users to get more details from the movies they search and they also have the option to favorite the movie. This app was built using Javascript, HTML, CSS, Node.js, and ExpressJS 
           <br>
           <br>
-          <a href="https://ryanmovies.herokuapp.com/" target='_blank'>See Here</a> 
+          <a target='_blank' href="https://ryanmovies.herokuapp.com/" target='_blank'>See Here</a> 
           </p>
           </div>
 
@@ -359,7 +359,7 @@
             <p><more>FoodMon was the web app I built for my first offical project at General Assembly. It allows users who have a difficult time choosing what to eat be more decesive with a fun game I implemented as it's main feature. Users also have access to view recipes that emerged victrious from the game and also includes search features for more specific recipes users might want and restaruants that they might want to check out. This app was built using Javascript, HTML, CSS, Node.js, ExpessJS, SQL, Sequelize, Passport Local, Jquery, Ajax, Bootstrap, EJS, Yummly API, Yelp api, Mapbox api 
             <br>
             <br>
-              <a href="https://firstproject24.herokuapp.com/home" target='_blank'>See Here</a>
+              <a target='_blank' href="https://firstproject24.herokuapp.com/home" target='_blank'>See Here</a>
             </p>
           </div>
           
@@ -371,7 +371,7 @@
             <p><more>I built my portfolio on the side just to have a place where I can store my projects and give more details about my story and just who I am as a person. I built this using HTML, CSS, and Javascript
             <br>
             <br>
-              <a href="https://ryan-portfolio.herokuapp.com/" target='_blank'>See Here</a>
+              <a target='_blank' href="https://ryan-portfolio.herokuapp.com/" target='_blank'>See Here</a>
             </p>
           </div>
 
