--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -13,6 +13,8 @@
             <br>
             <a href="mailto:ryanshim92@gmail.com">ryanshim92@gmail.com</a>
             <br>
+            <t>Phone</t>
+            818-849-0570
           </p>
           <p>
             <t>Address</t>
