changed download link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
           <p>Currently, I am a student of the full stack Web Development Immersive program at General Assembly, looking to contribute to a team and grow my skills as a junior developer. I'm interested in all kinds of programming assets and I enjoy both front and back-end programming. Other things I enjoy besides programming include playing basketball, watching movies, and volunteering.</p>
         </div>
         <div class="col-lg-3">
-          <p><a target='_blank' href="https://www.dropbox.com/s/xeenxblf0ov8g03/STYLED%20RESUME.pdf?dl=1"><i class="icon-file"></i><sm>DOWNLOAD PAPER RESUME</sm></a></p>
+          <p><a target='_blank' href="https://www.dropbox.com/s/20xwv80l45q4qt0/Resume.pdf?dl=1"><i class="icon-file"></i><sm>DOWNLOAD PAPER RESUME</sm></a></p>
         </div>
       </div>
     </div>
