--- a/views/index.ejs
+++ b/views/index.ejs
@@ -384,7 +384,17 @@
               <a href="#">Coming Soon</a>
             </p>
           </div>
-      
+
+          <div class="col-lg-6 col-lg-offset-2">
+            <p><img class="img-responsive" src="https://i.imgur.com/NCMK2jU.png" alt=""></p>
+          </div>
+          <div class="col-lg-4">
+              <p style="color: white; font-weight: bold;">MOONWALK</p>
+            <p><more>Moonwalk was the first web application that I made in a team. I got more proficient at using GitHub in terms of pull requests and issues. This application is a single family unit calculator that provides the user to see if they get a good return of investment on a selected property. We built this app using Rails, ActiveRecord, Bcrypt, Nokogiri, AJAX, JSON, and JQuery <br/><br/>
+              <a href="#">Coming Soon</a>
+            </p>
+          </div>
+
       </div>
       <br>
       <br>
