added moonwalk link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -391,7 +391,7 @@
           <div class="col-lg-4">
               <p style="color: white; font-weight: bold;">MOONWALK</p>
             <p><more>Moonwalk was the first web application that I made in a team. I got more proficient at using GitHub in terms of pull requests and issues. This application is a single family unit calculator that provides the user to see if they get a good return of investment on a selected property. We built this app using Rails, ActiveRecord, Bcrypt, Nokogiri, AJAX, JSON, and JQuery <br/><br/>
-              <a href="#">Coming Soon</a>
+              <a target='_blank' href="https://moonwalk.herokuapp.com/">See Here</a>
             </p>
           </div>
 
