added cook link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -381,7 +381,7 @@
           <div class="col-lg-4">
               <p style="color: white; font-weight: bold;">COOKMON</p>
             <p><more>CookMon was one of the first web applications I made when I learned Ruby on Rails. For me personally, it felt incredibly different from Javascript and it took some time to get used to but, I realized how powerful Rails is as a Framework. This application allows users to store their personal recipe books online, as a result they would have an easier time access all their recipes. Through this app users can search for specific recipes with certain ingredients or ingredients that correlate with specific recipes. I built this app using Ruby, Rails, Javascript, HTML, and CSS <br/><br/>
-              <a href="#">Coming Soon</a>
+              <a href="https://ryan-cooks.herokuapp.com/" target="_blank">See Here</a>
             </p>
           </div>
 
